@@ -1,7 +1,7 @@
 %define	with_python_subpackage	@WITH_PYTHON_SUBPACKAGE@
 %define	with_bzip2		@WITH_BZIP2@
 %define	with_apidocs		@WITH_APIDOCS@
-%define strip_binaries		0
+%define strip_binaries		1
 %define	__spec_install_post	:
 
 # XXX legacy requires './' payload prefix to be omitted from rpm packages.
@@ -14,7 +14,7 @@ Summary: The Red Hat package management system.
 Name: rpm
 %define version @VERSION@
 Version: %{version}
-Release: 0.23
+Release: 0.24
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{version}.tar.gz
 Copyright: GPL
@@ -310,6 +310,11 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Wed Dec 13 2000 Jeff Johnson <jbj@redhat.com>
+- fix: (transaction.c) assume file state normal if tag is missing.
+- fix: failed signature read headerFree segfault.
+- fix: revert ALPHA_LOSSAGE, breaks 6.2/i386.
+
 * Tue Dec 12 2000 Jeff Johnson <jbj@redhat.com>
 - bail on header regions.
 - resurrect rpmrc Provides: as well as implicit dependency on packge info.
