@@ -68,6 +68,9 @@
 	- bail on header regions.
 	- resurrect rpmrc Provides: as well as implicit dependency on packge
 		info.
+	- fix: (transaction.c) assume file state normal if tag is missing.
+	- fix: failed signature read headerFree segfault.
+	- fix: revert ALPHA_LOSSAGE, breaks 6.2/i386.
 
 3.0.6 -> 4.0
 	- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
